<resources>
    <string name="app_name">高德地图捷途版</string>
    <string name="title_activity_main">DesaySvPsMap</string>
    <string name="sv_title_license_fail">温馨提示:当前应用已停用,请联系供应商沟通解决方案</string>
    <string name="sv_map_back_to_car">回到自车</string>
    <string name="sv_map_my_position">我的位置</string>
    <string name="sv_map_zoom_out_max_tip">地图已经缩至最小</string>
    <string name="sv_map_zoom_in_max_tip">地图已经放至最大</string>
    <string name="sv_map_search_box_tip">请输入目的地</string>
    <string name="sv_map_favorite">收藏点</string>
    <string name="sv_map_favorite_none">暂未收藏任何地点</string>
    <string name="sv_map_go_home_tips">请先设置家的地址</string>
    <string name="sv_map_go_company_tips">请先设置公司的地址</string>
    <string name="sv_map_card_network_tips">网络异常,请检查后重试\n联网后尝试在线搜索可以查找更多结果</string>
    <string name="sv_map_card_loading_tips">正在加载...</string>
    <string name="sv_map_gnss_title">星图</string>
    <string name="sv_map_gnss_loading">定位中...请将车行驶到开阔地带</string>
    <string name="sv_map_gnss_count">卫星总数</string>
    <string name="sv_map_gnss_available_count">可用卫星</string>
    <string name="sv_map_gnss_loading_tips">建筑物遮挡，多云阴雨天气等因素会影响定位速度</string>
    <string name="sv_map_gnss_speed">速度：</string>
    <string name="sv_map_gnss_bearing">航向：</string>
    <string name="sv_map_gnss_time">GPS时间：</string>
    <string name="sv_map_gnss_weak_singal">GPS信号弱</string>
    <string name="sv_map_switch_2dcar_tips">已切换为：2D车头向上</string>
    <string name="sv_map_switch_3dcar_tips">已切换为：3D车头向上</string>
    <string name="sv_map_switch_north_tips">已切换为：2D正北向上</string>
    <string name="sv_map_traffic_event_11010">故障车</string>
    <string name="sv_map_traffic_event_11011">车祸</string>
    <string name="sv_map_traffic_event_11012">障碍</string>
    <string name="sv_map_traffic_event_11021">堵车</string>
    <string name="sv_map_traffic_event_11031">交通管制</string>
    <string name="sv_map_traffic_event_11040">施工</string>
    <string name="sv_map_traffic_event_11050">封路</string>
    <string name="sv_map_traffic_event_11060">警告</string>
    <string name="sv_map_traffic_event_11070">公告</string>
    <string name="sv_map_traffic_event_11071">实景</string>
    <string name="sv_map_traffic_event_11100">积水</string>
    <string name="sv_map_traffic_event_others">事件</string>
    <string name="sv_map_traffic_detail_dist_format">距离：%1$s</string>
    <string name="sv_map_traffic_detail_dtime_format">具体时间：%1$s</string>
    <string name="sv_map_traffic_detail_stime_format">开始时间：%1$s</string>
    <string name="sv_map_traffic_detail_etime_format">结束时间：%1$s</string>
    <string name="sv_map_traffic_detail_nicktime_format">%1$s • %2$s前</string>
    <string name="sv_route_start_poi_tip">起</string>
    <string name="sv_route_end_poi_tip">终</string>
    <string name="sv_route_via_poi_tip">经</string>
    <string name="sv_route_being_calculated_and_try_again">正在算路中，请稍后重试！</string>
    <string name="sv_route_please_enter_a_via">请输入途经点</string>
    <string name="sv_route_please_enter_a_end">请输入终点</string>
    <string name="sv_route_search_for_transit_points">搜索途经点</string>
    <string name="sv_route_can_only_be_added_three_via">只能添加3个途经点</string>
    <string name="sv_route_you_are_here">我的位置</string>
    <string name="sv_route_search_home_text_big">暂无搜索及导航历史记录</string>
    <string name="sv_route_query_content_cannot_be_empty">查询内容不能为空</string>
    <string name="sv_route_set_it_as_a_waypoint">设为途经点</string>
    <string name="sv_route_modify_the_waypoint">修改途经点</string>
    <string name="sv_route_modify_the_endpoint">修改终点</string>
    <string name="sv_route_path_planning_failed_and_try_again">路径规划失败，点击重试</string>
    <string name="sv_route_along_search_btn_delete">删除途经点</string>
    <string name="sv_route_start_navigating">开始导航</string>
    <string name="sv_route_car_result_share_enter">进入</string>
    <string name="sv_route_car_result_share_to_end_poi">到达终点</string>
    <string name="sv_route_car_result_share_pass">" 途经 "</string>
    <string name="sv_route_car_result_share_driving">行驶</string>
    <string name="sv_route_car_result_share_light_format">" 红绿灯%s个"</string>
    <string name="sv_route_route_foot_navi_no_name_road">无名道路</string>
    <string name="sv_route_navi_action_along">直行</string>
    <string name="sv_route_navi_action_turnleft">左转</string>
    <string name="sv_route_navi_action_turnright">右转</string>
    <string name="sv_route_navi_action_left_front">向左前方行驶</string>
    <string name="sv_route_navi_action_right_front">向右前方行驶</string>
    <string name="sv_route_navi_action_left_back">向左后转</string>
    <string name="sv_route_navi_action_right_back">向右后转</string>
    <string name="sv_route_navi_action_turn_left_back">左转调头</string>
    <string name="sv_route_navi_action_along_rest">经过服务区</string>
    <string name="sv_route_navi_action_along_charge">经过收费站</string>
    <string name="sv_route_navi_action_enter_ring">进入环岛</string>
    <string name="sv_route_navi_action_leave_ring">驶出环岛</string>
    <string name="sv_route_navi_avoidance_route_tips">避让上限为3个路段，请重新选择</string>
    <string name="sv_route_navi_sim">模拟导航</string>
    <string name="sv_route_navi_avoid_road_sections">避开路段</string>
    <string name="sv_route_navi_parry">避开</string>
    <string name="sv_route_navi_restrict_set_up">设置</string>
    <string name="sv_route_navi_restrict_open">开启</string>
    <string name="sv_route_navi_restrict_view">查看</string>
    <string name="sv_route_navi_restrict_policy">限行政策</string>
    <string name="sv_route_navi_restrict_time">限行时间</string>
    <string name="sv_route_navi_restrict_region">限行区域</string>
    <string name="sv_route_navi_restrict_stipulate">限行规定</string>
    <string name="sv_route_navi_commonly_used">常用</string>
    <string name="sv_route_navi_gaode_recommends">高德推荐</string>
    <string name="sv_route_navi_avoid_congestion">躲避拥堵</string>
    <string name="sv_route_navi_charge_less">少收费</string>
    <string name="sv_route_navi_sing_highway">高速优先</string>
    <string name="sv_route_navi_avoid_highway">不走高速</string>
    <string name="sv_route_navi_sing_route_width">大路优先</string>
    <string name="sv_route_navi_sing_speed_first">速度最快</string>
    <string name="sv_route_navi_drop_by">顺路搜</string>
    <string name="sv_route_navi_drop_by_point">途径点</string>
    <string name="sv_route_navi_route_planning">路线规划中</string>
    <string name="sv_route_navi_tip_start_in_closed_road">起点在封闭路段，请合理安排出行</string>
    <string name="sv_route_navi_tip_via_in_closed_road">途经点在封闭路段，请合理安排出行</string>
    <string name="sv_route_navi_tip_end_in_closed_road">终点在封闭路段，请合理安排出行</string>
    <string name="sv_route_navi_fmt_tip_close_road">%s，已无法避开</string>
    <string name="sv_route_navi_fmt_tip_avoid_close_road">%s，已为您避开</string>
    <string name="sv_route_navi_fmt_tip_avoid_jam">已避开%s拥堵，长度%s，约%s通过</string>
    <string name="sv_route_navi_fmt_tip_business_arrive_rest_soon">到达时终点即将休息，营业时间%s</string>
    <string name="sv_route_navi_fmt_tip_business_not_open">到达时终点不营业，营业时间%s</string>
    <string name="sv_route_navi_tip_unavoid_forbidden_road">路线途经禁行路段，已无法避开</string>
    <string name="sv_route_navi_tip_avoid_forbidden_road">路线途径禁行路段，已为您避开</string>
    <string name="sv_route_navi_tip_holiday_free">高速路段节假日免费</string>
    <string name="sv_route_navi_tip_narrow_road">当前路线存在窄路，请注意行车安全</string>
    <string name="sv_route_navi_route_refresh_success">路线已刷新成功</string>
    <string name="sv_route_navi_request_the_weather">请求天气中</string>
    <string name="sv_route_navi_request_the_via">请求途径路中</string>
    <string name="sv_route_navi_request_the_service">请求服务区中</string>
    <string name="sv_route_weather_text_update">高德交通 · 更新于%d分钟前</string>
    <string name="sv_route_whether_to_go_or_not">是否去：</string>
    <string name="sv_route_the_vehicle_must_be_stationary">车辆需处于静止状态</string>
    <string name="sv_navi_continue_navi">继续导航</string>
    <string name="sv_navi_pause_navi">暂停导航</string>
    <string name="sv_navi_outlet">出口</string>
    <string name="sv_navi_remaining">剩余</string>
    <string name="sv_navi_estimate">预计</string>
    <string name="sv_navi_enter">进入</string>
    <string name="sv_navi_walk_navigation">发送目的地到高德手机APP下车后继续导航</string>
    <string name="sv_navi_send_it_now">立即发送</string>
    <string name="sv_navi_tripshare_title">微信扫描二维码\n即可将路线跟位置分享给微信联系人</string>
    <string name="sv_navi_tripshare_scantip">请使用微信扫码</string>
    <string name="sv_navi_tripshare_getting_qrcodes">正在获取二维码</string>
    <string name="sv_navi_tripshare_getting_qrcodes_failed">获取二维码失败</string>
    <string name="sv_navi_tripshare_share_on_wechat">微信分享</string>
    <string name="sv_navi_tripshare_no_historical_contacts">暂无历史联系人</string>
    <string name="sv_navi_tripshare_sms">短信分享</string>
    <string name="sv_navi_tripshare_sms_tip">输入手机号或选择联系人，分享路线和位置</string>
    <string name="sv_navi_tripshare_errortip">网络异常，无法分享行程</string>
    <string name="sv_navi_tripshare_refresh">请检查网络后重试或尝试刷新</string>
    <string name="sv_navi_tripshare_login_phone_hint">请输入手机号</string>
    <string name="sv_navi_sim_speed_low">低速</string>
    <string name="sv_navi_sim_speed_medium">中速</string>
    <string name="sv_navi_sim_speed_high">高速</string>
    <string name="sv_navi_zone_speed_limit">区间限速</string>
    <string name="sv_navi_remaining_distance">剩余距离</string>
    <string name="sv_navi_high_speed_full_information">高速全程信息</string>
    <string name="sv_navi_kilometer">公里</string>
    <string name="sv_navi_service">服务区</string>
    <string name="sv_navi_hour">小时</string>
    <string name="sv_navi_route_high_speed_loading">高速全程信息加载中...</string>
    <string name="sv_navi_text_stop">停这里</string>
    <string name="sv_navi_text_tab1">P1</string>
    <string name="sv_navi_text_tab2">P2</string>
    <string name="sv_navi_text_tab3">P3</string>
    <string name="sv_navi_mileage_driven">驾驶里程</string>
    <string name="sv_navi_driving_time">驾驶时长</string>
    <string name="sv_navi_average">平均速度</string>
    <string name="sv_navi_fastest_speed">最快速度</string>
    <string name="sv_route_know">知道了</string>
    <string name="sv_navi_recommended_speed">建议车速</string>
    <string name="sv_agreement_content_txt_1">1.本软件需要联网、调用位置权限、使用精准位置信息、WLAN状态信息、设备信息，以提供驾车导航服务。</string>
    <string name="sv_agreement_content_txt_2">2.有关个人信息处理的范围、目的和方式等，详情可通过《捷途汽车用户隐私政策》、《高德服务条款》、《高德隐私权政策》了解。</string>
    <string name="sv_agreement_content_txt_3">3.本软件提供的地点查询、路线规划、出行导航、交通路况等功能和服务仅供您参考，请不要以此作为您行驶或出行的唯一依据。</string>
    <string name="sv_agreement_content_txt_4">4.请在使用本软件前认真阅读和充分理解以上信息、政策、协议和条款，如您不同意其中的任何内容，我们将无法为您提供相应的服务。</string>
    <string name="sv_agreement_whale_cue">地图使用提示</string>
    <string name="sv_agreement_agree_txt">同意</string>
    <string name="sv_agreement_exit_txt">退出</string>
    <string name="sv_agreement_not_tips">不再提示</string>
    <string name="sv_agreement_not_tips_accessibility">不再提示#不再提醒#勾选不再提醒</string>
    <string name="sv_agreement_terms_service">《高德服务条款》</string>
    <string name="sv_agreement_privacy_policy">《高德隐私权政策》</string>
    <string name="sv_agreement_account">《高德账号服务个人信息处理规则》</string>
    <string name="sv_agreement_terms_text">高德服务条款</string>
    <string name="sv_agreement_policy_text">高德隐私权政策</string>
    <string name="sv_agreement_account_text">高德账号服务个人信息处理规则</string>
    <string name="sv_agreement_icp_title_text">工业和信息化部政务服务平台</string>
    <string name="sv_agreement_loading_text">正在加载</string>
    <string name="sv_agreement_click_to_refresh">点击刷新</string>
    <string name="sv_agreement_check_the_network_and_try_again">请检查网络后重试</string>
    <string name="sv_agreement_scan_qr_code">高德手机版扫码查看</string>
    <string name="sv_engineer_current_uuid">当前测试UUID: %s</string>
    <string name="sv_engineer_test_uuid_setup">测试UUID设置</string>
    <string name="sv_engineer_retart_close_take_effect">开启/关闭后需要重启生效！</string>
    <string name="sv_engineer_require_uuid_15">UUID不能为空,长度为19</string>
    <string name="sv_engineer_reset_map">重置导航</string>
    <string name="sv_engineer_reset_map_tips">（重置导航会清空所有地图缓存，包括标定信息）</string>
    <string name="sv_engineer_continue_to_calculate_the_road">是否开启接续算路（电动车专属）</string>
</resources>