<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.desaysv.psmap.ui.agreement.AgreementViewModel" />
    </data>

    <com.autonavi.auto.skin.view.SkinConstraintLayout
        android:id="@+id/agreement_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{()->0}"
        android:soundEffectsEnabled="false"
        android:background="@drawable/shape_bg_full_screen_day"
        app:background4Night="@drawable/shape_bg_full_screen_night"
        app:background4Skin="@drawable/shape_bg_full_screen_day">

        <com.autonavi.auto.skin.view.SkinConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:marginActivateAgreement="@{!viewModel.screenStatus}">
            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sv_dimen_240"
                android:includeFontPadding="false"
                android:text="@string/sv_agreement_whale_cue"
                android:textFontWeight="500"
                android:textColor="@color/onPrimaryDay"
                app:textColor4Night="@color/onPrimaryNight"
                app:textColor4Skin="@color/onPrimaryDay"
                android:textSize="@dimen/sv_dimen_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/content_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sv_dimen_561"
                android:layout_marginTop="@dimen/sv_dimen_40"
                android:lineSpacingExtra="@dimen/sv_dimen_3"
                android:includeFontPadding="false"
                android:textFontWeight="400"
                android:text="@string/sv_agreement_content_txt_1"
                android:textColor="@color/customColorRbBgDay"
                app:textColor4Skin="@color/customColorRbBgDay"
                app:textColor4Night="@color/customColorWhite80Night"
                android:textSize="@dimen/sv_dimen_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />
            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/content_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sv_dimen_561"
                android:layout_marginTop="@dimen/sv_dimen_40"
                android:lineSpacingExtra="@dimen/sv_dimen_3"
                android:includeFontPadding="false"
                android:textFontWeight="400"
                android:text="@string/sv_agreement_content_txt_2"
                android:textColor="@color/customColorRbBgDay"
                app:textColor4Skin="@color/customColorRbBgDay"
                app:textColor4Night="@color/customColorWhite80Night"
                android:textSize="@dimen/sv_dimen_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_1" />
            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/content_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sv_dimen_561"
                android:layout_marginTop="@dimen/sv_dimen_40"
                android:lineSpacingExtra="@dimen/sv_dimen_3"
                android:includeFontPadding="false"
                android:textFontWeight="400"
                android:text="@string/sv_agreement_content_txt_3"
                android:textColor="@color/customColorRbBgDay"
                app:textColor4Skin="@color/customColorRbBgDay"
                app:textColor4Night="@color/customColorWhite80Night"
                android:textSize="@dimen/sv_dimen_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_2" />
            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/content_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/sv_dimen_561"
                android:layout_marginTop="@dimen/sv_dimen_40"
                android:lineSpacingExtra="@dimen/sv_dimen_3"
                android:includeFontPadding="false"
                android:textFontWeight="400"
                android:text="@string/sv_agreement_content_txt_4"
                android:textColor="@color/customColorRbBgDay"
                app:textColor4Skin="@color/customColorRbBgDay"
                app:textColor4Night="@color/customColorWhite80Night"
                android:textSize="@dimen/sv_dimen_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tips"
                android:layout_width="0dp"
                android:layout_height="@dimen/sv_dimen_64"
                android:layout_marginLeft="@dimen/sv_dimen_561"
                android:layout_marginRight="@dimen/sv_dimen_561"
                android:layout_marginTop="@dimen/sv_dimen_72"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/content_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.autonavi.auto.skin.view.SkinCheckBox
                    android:id="@+id/cb_no_more_tips"
                    android:layout_width="@dimen/sv_dimen_64"
                    android:layout_height="@dimen/sv_dimen_64"
                    android:button="@null"
                    tools:checked="true"
                    android:contentDescription="@string/sv_agreement_not_tips_accessibility"
                    android:background="@drawable/selector_bg_choice_day"
                    app:background4Night="@drawable/selector_bg_choice_night"
                    app:background4Skin="@drawable/selector_bg_choice_day"
                    android:checked="@{viewModel.checkState}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.autonavi.auto.skin.view.SkinTextView
                    android:id="@+id/no_more_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sv_dimen_38"
                    android:text="@string/sv_agreement_not_tips"
                    android:textColor="@color/onPrimaryDay"
                    app:textColor4Night="@color/onPrimaryNight"
                    app:textColor4Skin="@color/onPrimaryDay"
                    android:textSize="@dimen/sv_dimen_30"
                    android:importantForAccessibility="no"
                    app:layout_constraintLeft_toRightOf="@+id/cb_no_more_tips"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.autonavi.auto.skin.view.SkinTextView
                    android:id="@+id/agreement_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sv_agreement_terms_service"
                    android:textColor="@color/primaryContainerSecondaryDay"
                    app:textColor4Night="@color/onTertiaryContainerNight"
                    app:textColor4Skin="@color/primaryContainerSecondaryDay"
                    android:textSize="@dimen/sv_dimen_30"
                    app:layout_constraintRight_toLeftOf="@+id/agreement_policy"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.autonavi.auto.skin.view.SkinTextView
                    android:id="@+id/agreement_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sv_agreement_privacy_policy"
                    android:textColor="@color/primaryContainerSecondaryDay"
                    app:textColor4Night="@color/onTertiaryContainerNight"
                    app:textColor4Skin="@color/primaryContainerSecondaryDay"
                    android:textSize="@dimen/sv_dimen_30"
                    app:layout_constraintRight_toLeftOf="@+id/agreement_account"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.autonavi.auto.skin.view.SkinTextView
                    android:id="@+id/agreement_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sv_agreement_account"
                    android:textColor="@color/primaryContainerSecondaryDay"
                    app:textColor4Night="@color/onTertiaryContainerNight"
                    app:textColor4Skin="@color/primaryContainerSecondaryDay"
                    android:textSize="@dimen/sv_dimen_30"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.desaysv.psmap.model.view.ShadowLayout
                android:id="@+id/agreement_confirm"
                android:layout_width="@dimen/sv_dimen_400"
                android:layout_height="@dimen/sv_dimen_90"
                android:background="@drawable/selector_bg_inverse_primary_day"
                app:background4Skin="@drawable/selector_bg_inverse_primary_day"
                app:background4Night="@drawable/selector_btn_confirm_login_night"
                android:layout_marginTop="@dimen/sv_dimen_78"
                app:layout_constraintTop_toBottomOf="@+id/tips"
                app:layout_constraintEnd_toStartOf="@+id/agreement_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:contentDescription="@string/sv_agreement_agree_txt"
                app:radius="@dimen/sv_dimen_4"
                app:setShadowColor="@{viewModel.isNight}"
                app:shadowColor="@color/customColorShadowColorDay"
                app:shadowDx="@dimen/sv_dimen_2"
                app:shadowDy="@dimen/sv_dimen_2"
                app:shadowRadius="@dimen/sv_dimen_10">
                <com.autonavi.auto.skin.view.SkinTextView
                    android:layout_width="@dimen/sv_dimen_400"
                    android:layout_height="@dimen/sv_dimen_90"
                    android:text="@string/sv_agreement_agree_txt"
                    android:gravity="center"
                    android:textColor="@color/primaryDay"
                    app:textColor4Night="@color/onPrimaryNight"
                    app:textColor4Skin="@color/primaryDay"
                    android:textSize="@dimen/sv_dimen_34"
                    android:importantForAccessibility="no"/>
            </com.desaysv.psmap.model.view.ShadowLayout>

            <com.autonavi.auto.skin.view.SkinTextView
                android:id="@+id/agreement_cancel"
                android:layout_width="@dimen/sv_dimen_300"
                android:layout_height="@dimen/sv_dimen_66"
                android:layout_marginStart="@dimen/sv_dimen_40"
                android:text="@string/sv_agreement_exit_txt"
                android:background="@drawable/selector_bg_cancel_night"
                app:background4Night="@drawable/selector_bg_cancel_day"
                app:background4Skin="@drawable/selector_bg_cancel_night"
                android:textColor="@color/primaryContainerDay"
                app:textColor4Night="@color/onPrimaryNight"
                app:textColor4Skin="@color/primaryContainerDay"
                android:textSize="@dimen/sv_dimen_28"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@+id/agreement_confirm"
                app:layout_constraintLeft_toRightOf="@+id/agreement_confirm"
                app:layout_constraintRight_toRightOf="parent"/>
        </com.autonavi.auto.skin.view.SkinConstraintLayout>
    </com.autonavi.auto.skin.view.SkinConstraintLayout>
</layout>